@@ -23,6 +23,7 @@ new_command = head3
 command = dir_option
 
 [Generic / CONFIGURATION]
+[Generic / MARKDOWN CONVERSION NOTES]
 [Requires]
 [Support]
 websites = metacpan
